--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Huma Malik Portfolio</h1>
     <h2>About Me</h2>
-    <h2>Projects CHANGE1</h2>
+    <h2>Projects CHANGEFINAL</h2>
     <h2>Contact Me</h2>
 
 
