--- a/index.html
+++ b/index.html
@@ -32,9 +32,32 @@
               <span id="time-container">0</span> seconds!
             </p>
           </div>
-          <img src="/portpic.jpg" alt="A photo of Huma" class="portrait"/>
+          <img src="./portpic.jpg" alt="A photo of Huma" class="portrait">
         </div>
       </section>
+
+      <section id="projects">
+        <h2>Projects</h2>
+        <details class="project">
+          <summary class="project-title">
+            <h3>Dasmoto's Arts and Crafts</h3>
+          </summary>
+          <img src="./arts.jpg" alt="Arts and crafts" class="project-image">
+          <p class="project-description">
+            A company website for Dasmoto's Arts and Crafts
+          </p>
+        </details>
+        <details class="project">
+          <summary class="project-title">
+            <h3>Huma's Company</h3>
+          </summary>
+          <img src="./hmcompany.jpg" alt="Huma's company" class="project-image">
+          <p class="project-description">
+            Huma's company website 
+          </p>
+        </details>
+      </section>
+
       
     </main>
 
