--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./style.css" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Roboto:wght@300&display=swap');
+    </style>
   </head>
   <body>
     <nav>
@@ -58,9 +61,37 @@
         </details>
       </section>
 
-      
+      <section>
+        <h2>Skills</h2>
+        <div id="skills-container">
+          <i class="fab fa-html5"></i>
+          <i class="fab fa-css3-alt"></i>
+          <i class="fab fa-js"></i>
+          <i class="fab fa-react"></i>
+          <i class="fab fa-aws"></i>
+          <i class="fab fa-sketch"></i>
+          <i class="fab fa-figma"></i>
+          <i class="fab fa-git"></i>
+          <i class="fab fa-chrome"></i>
+          <i class="fas fa-terminal"></i>
+          <i class="fas fa-universal-access"></i>
+          <i class="fab fa-npm"></i>
+          <i class="fab fa-node"></i>
+          <i class="fab fa-github"></i>
+        </div>
+      </section>
+
+      <section>
+        <h2>Contact Me</h2>
+        <p>If you're interested in my work, I'd love to hear from you!</p>
+        <p>You can reach me by email on h.malik757@hotmail.com</p>
+      </section>
     </main>
 
+    <footer>Made with <span class="heart">♥</span> in London</footer>
   </body>
+  <script>
+
+  </script>
 
   </html>
