--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./style.css" />
+    <script src="https://kit.fontawesome.com/d7aa56bbb6.js" crossorigin="anonymous"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Roboto:wght@300&display=swap');
     </style>
@@ -16,6 +17,7 @@
       <ul class="nav-items">
         <li class="nav-item"><a href="#about-me">About Me</a></li>
         <li class="nav-item"><a href="#projects">Projects</a></li>
+        <li class="nav-item"><a href="#skills">Skills</a></li>
         <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
       </ul>
     </nav>
@@ -61,23 +63,23 @@
         </details>
       </section>
 
-      <section>
+      <section id="skills">
         <h2>Skills</h2>
         <div id="skills-container">
-          <i class="fab fa-html5"></i>
-          <i class="fab fa-css3-alt"></i>
-          <i class="fab fa-js"></i>
-          <i class="fab fa-react"></i>
-          <i class="fab fa-aws"></i>
-          <i class="fab fa-sketch"></i>
-          <i class="fab fa-figma"></i>
-          <i class="fab fa-git"></i>
-          <i class="fab fa-chrome"></i>
-          <i class="fas fa-terminal"></i>
-          <i class="fas fa-universal-access"></i>
-          <i class="fab fa-npm"></i>
-          <i class="fab fa-node"></i>
-          <i class="fab fa-github"></i>
+          <i class="fa-brands fa-html5"></i>
+          <i class="fa-brands fa-css3"></i>
+          <i class="fa-brands fa-js"></i>
+          <i class="fa-brands fa-react"></i>
+          <i class="fa-brands fa-aws"></i>
+          <i class="fa-brands fa-sketch"></i>
+          <i class="fa-brands fa-figma"></i>
+          <i class="fa-brands fa-git"></i>
+          <i class="fa-brands fa-chrome"></i>
+          <i class="fa-brands fa-terminal"></i>
+          <i class="fa-brands fa-universal-access"></i>
+          <i class="fa-brands fa-npm"></i>
+          <i class="fa-brands fa-node"></i>
+          <i class="fa-brands fa-github"></i>
         </div>
       </section>
 
