--- a/index.html
+++ b/index.html
@@ -83,10 +83,15 @@
         </div>
       </section>
 
-      <section>
+      <section id="contact-me">
         <h2>Contact Me</h2>
         <p>If you're interested in my work, I'd love to hear from you!</p>
         <p>You can reach me by email on h.malik757@hotmail.com</p>
+        <div id="contact-me-icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-linkedin-in"></i>
+          <i class="fa-regular fa-envelope"></i>
+        </div>
       </section>
     </main>
 
